--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.64.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-paystack": "^6.0.0",
     "react-router-dom": "^7.9.4",
     "zustand": "^5.0.8"
   },
